--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -4,6 +4,14 @@
 
 {% block content %}
 <div class="container mt-4">
+
+    <div class="row mb-4">
+        <div class="col-md-12">
+            <!-- Include Coinbase account information component -->
+            {% include 'partials/_coinbase_dashboard.html' %}
+        </div>
+    </div>
+
     <div class="row">
         <div class="col-md-12">
             <div class="automations-container mb-4">
