--- a/app/templates/partials/_dashboard_modals.html
+++ b/app/templates/partials/_dashboard_modals.html
@@ -17,6 +17,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
             </div>
             <form id="createAutomationForm">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                 <div class="modal-body">
                     <div class="mb-3">
                         <label for="automationName" class="form-label">Automation Name</label>
