advanced api working; portfolio management for automations in place

--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -29,6 +29,7 @@
                             <li>Click "Create API Key" and you'll see your API Key and API Secret</li>
                             <li>Copy and paste both values below (you won't be able to see the API Secret again)</li>
                         </ol>
+                        <p>These API keys allow us to retrieve a list of portfolios.</p>
                     </div>
                     
                     <form method="POST" action="{{ url_for('dashboard.settings') }}">
